# CracklingPlusPlus

./: .gitignore  CMakeLists.txt  CMakePresets.json  CracklingPlusPlus.cpp  CracklingPlusPlus.h  Dockerfile  LICENSE  README.md
.github/workflows/: cmake.yml
ExtractOfftargets/: CMakeLists.txt  ExtractOfftargets.cpp  ExtractOfftargets.hpp
ISSLCreateIndex/: CMakeLists.txt  CmakeLists.txt  ISSLCreateIndex.cpp  ISSLCreateIndex.hpp
ISSLScoreOfftargets/: CMakeLists.txt  ISSLScoreOfftargets.cpp  ISSLScoreOfftargets.hpp
ISSLScoreOfftargetsMMF/: CMakeLists.txt  ISSLScoreOfftargetsMMF.cpp  ISSLScoreOfftargetsMMF.hpp
TestData/non/: nonchromosome.2.bt2  nonchromosome.3.bt2  nonchromosome.4.bt2  nonchromosome.rev.2.bt2
include/: CHOPCHOP.hpp  ConfigManager.hpp  Constants.hpp  Helpers.h  Helpers.hpp  ISSL2Stage.hpp  ISSLClustering.hpp  ISSLOffTargetScoring.hpp  ISSLScoringModule.hpp  ISSLScoringModuleMMF.hpp  Logger.hpp  bowtie2.hpp  bowtie2Module.hpp  cas9InputModule.hpp  cas9InputProcessor.hpp  cfdPenalties.h  chopchopModule.hpp  configParserModule.hpp  consensusModule.hpp  inputModule.hpp  inputProcessor.hpp  mitPenalties.h  mm10db.hpp  mm10dbModule.hpp  offTargetScoring.hpp  otScorePenalties.hpp  outputModule.hpp  pipelineModule.hpp  sgrnascorer2.hpp  sgrnascorer2Module.hpp  specificityModule.hpp  svmData.hpp  unistd.h  util.hpp
include/sys/: time.h
lib/: CHOPCHOP.cpp  CMakeLists.txt  ConfigManager.cpp  Helpers.cpp  ISSL2Stage.cpp  ISSLClustering.cpp  ISSLOffTargetScoring.cpp  ISSLScoringModule.cpp  ISSLScoringModuleMMF.cpp  Logger.cpp  bowtie2.cpp  bowtie2Module.cpp  cas9InputModule.cpp  cas9InputProcessor.cpp  chopchopModule.cpp  configParserModule.cpp  consensusModule.cpp  inputModule.cpp  inputProcessor.cpp  mm10db.cpp  mm10dbModule.cpp  offTargetScoring.cpp  otScorePenalties.cpp  outputModule.cpp  sgrnascorer2.cpp  sgrnascorer2Module.cpp  specificityModule.cpp  svm.cpp  util.cpp
sample/: config.ini  slice-10-37.txt  slice-10-46.txt  slice-4-5.txt  slice-8-20.txt  slice-8-28.txt
src/: CracklingPlusPlus.cpp  test-test_config.ini  test_config.ini
tests/: CHOPCHOP.cpp  CMakeLists.txt  Constants.cpp  Helpers.cpp  bowtie2.cpp  mm10db.cpp  sgrnascorer2.cpp  testMain.cpp
tests/data/: test_config.ini  test_genome.fa  test_genome_bowtie2Index.2.bt2  test_genome_bowtie2Index.3.bt2  test_genome_bowtie2Index.4.bt2  test_genome_bowtie2Index.rev.2.bt2  test_genome_offTargets.fa  test_genome_offTargets_indexed.issl  test_genome_split.fa  test_model.txt
